<resources>
    <string name="app_name">Currency Converter</string>
    <string name="title_converter">Converter</string>
    <string name="title_rates">Rates</string>
    <string name="title_settings">Settings</string>
    <string name="switch_currencies">Switch currencies</string>
    <string name="amount">Amount</string>
    <string name="currency_code_euro">EUR</string>
    <string name="country_euro">Euro</string>
    <string name="choose_currency">Choose currency</string>
    <string name="country_flag">Country flag</string>
    <string name="equals_sign">=</string>
    <string name="currency_symbol">Currency symbol</string>
    <string name="currency_code_euro2">USD</string>
    <string name="currency_name2">US Dollar</string>
    <string name="action_settings">Settings</string>

    <string-array name="currencies">
        <item>EUR</item>

        <item>GBP</item>
        <item>USD</item>
        <item>DKK</item>

        <item>SEK</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>JPY</item>

    </string-array>

    <string-array name="currencies2">
        <item>EUR</item>

        <item>GBP</item>
        <item>USD</item>
        <item>DKK</item>

        <item>SEK</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>JPY</item>

    </string-array>




    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>