<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_converter">

    <fragment
        android:id="@+id/navigation_converter"
        android:name="com.kennakomea.currencyconverter.ui.converter.ConverterFragment"
        android:label="@string/title_converter"
        tools:layout="@layout/fragment_currencies">
    </fragment>

    <fragment
        android:id="@+id/navigation_currencies"
        android:name="com.kennakomea.currencyconverter.ui.converter.CurrencyFragment"
        android:label="currencies"
        tools:layout="@layout/fragment_currencies">
    </fragment>

    <fragment
        android:id="@+id/navigation_rates"
        android:name="com.kennakomea.currencyconverter.ui.rates.RatesFragment"
        android:label="@string/title_rates"
        tools:layout="@layout/fragment_rates" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.kennakomea.currencyconverter.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>